--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.1.3",
     "bootstrap": "^5.1.3",
     "card": "^2.5.4",
     "formik": "^2.2.9",
-    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.1.0",
@@ -18,7 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
-    "reactstrap": "^9.0.2",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
